chess incoming, a lot of updates

--- a/templates/email-verification.html
+++ b/templates/email-verification.html
@@ -21,11 +21,10 @@
         Un email de vérification vous a bien été adressé, pensez à regarder dans vos spams. (L'expéditeur est
         lecnambot@gmail.com)
         <br><br>
-        Une fois le lien reçu, pensez à cliquer dessus et vous serez redirigé vers votre compte fraîchement créé.
+        Une fois le lien reçu, pensez à cliquer dessus et vous aurez validé votre inscription, vous pourrez ensuite vous
+        connecter.
         <br><br>
-        Si vous ne cliquez pas sur ce lien. Votre inscription n'est pas considérée comme validée et votre compte n'est
-        donc
-        pas créé.
+        Votre inscription ne sera pas valide tant que vous n'aurez pas cliqué sur ce lien, vous disposez de 10 minutes.
     {% else %}
         Votre email a bien été vérifié.
         <br><br>
