--- a/templates/layouts/base_layout.html
+++ b/templates/layouts/base_layout.html
@@ -40,9 +40,9 @@
             <ul class="navbar-nav ms-auto">
                 {% if session.get("username") %}
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded"
-                                                         href="/profile/{{ session.get("username") }}">Profil</a></li>
+                                                         href="/profile/{{ session.get("username") }}">Profile</a></li>
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded"
-                                                         href="/chat">Messagerie</a></li>
+                                                         href="/chess">Chess</a></li>
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded"
                                                          href="/logout">Logout</a></li>
                 {% endif %}
