--- a/templates/profile.html
+++ b/templates/profile.html
@@ -40,6 +40,10 @@
                 <a href="https://getavataaars.com/">
                     <button type="button" class="btn btn-secondary">Créer son avatar</button>
                 </a>
+                <form action="/profile" class="section text-center" method="post">
+                    <input type="submit" name="submit" class="btn btn-secondary"
+                           value="Upload" id="upload_avatar">
+                </form>
             </div>
             <div class="col">
                 <ul class="list-group">
