--- a/templates/profile.html
+++ b/templates/profile.html
@@ -8,26 +8,26 @@
     Profil de {{ user_infos["username"] }}
 {% endblock %}
 
-{% block custom_link %}
-    <script type="text/javascript">
-        $(document).on('submit', '#updateInfos', function (e) {
-            console.log('hello');
-            e.preventDefault();
-            $.ajax({
-                type: 'POST',
-                url: '/profile/{{ session.get("username") }}',
-                data: {
-                    firstname: $("#update_firstname").val(),
-                    lastname: $("#update_lastname").val(),
-                    promo: $("#update_promo").val()
-                },
-                success: function () {
-                    alert('saved');
-                }
-            })
-        });
-    </script>
-{% endblock %}
+{#{% block custom_link %}#}
+{#    <script type="text/javascript">#}
+{#        $(document).on('submit', '#updateInfos', function (e) {#}
+{#            console.log('hello');#}
+{#            e.preventDefault();#}
+{#            $.ajax({#}
+{#                type: 'POST',#}
+{#                url: '/profile/{{ session.get("username") }}',#}
+{#                data: {#}
+{#                    firstname: $("#update_firstname").val(),#}
+{#                    lastname: $("#update_lastname").val(),#}
+{#                    promo: $("#update_promo").val()#}
+{#                },#}
+{#                success: function () {#}
+{#                    alert('saved');#}
+{#                }#}
+{#            })#}
+{#        });#}
+{#    </script>#}
+{#{% endblock %}#}
 
 {% block page_desc %}
     <br>
@@ -37,13 +37,19 @@
                 <img class="avatar" src="{{ url_for('static', filename='./assets/img/avatars/max.png') }}"
                      alt="avatar-max"/>
                 <br>
-                <a href="https://getavataaars.com/">
-                    <button type="button" class="btn btn-secondary">Créer son avatar</button>
-                </a>
-                <form action="/profile" class="section text-center" method="post">
-                    <input type="submit" name="submit" class="btn btn-secondary"
-                           value="Upload" id="upload_avatar">
-                </form>
+                <div class="row">
+                    <div class="col">
+                        <a href="https://getavataaars.com/">
+                            <button type="button" class="btn btn-secondary">Créer son avatar</button>
+                        </a>
+                    </div>
+                    <div class="col">
+                        <form action="/profile" class="section text-center" method="post">
+                            <input type="submit" name="submit" class="btn btn-secondary"
+                                   value="Upload" id="upload_avatar">
+                        </form>
+                    </div>
+                </div>
             </div>
             <div class="col">
                 <ul class="list-group">
