--- a/templates/chess.html
+++ b/templates/chess.html
@@ -224,10 +224,9 @@
                              alt="white_pawn">
                     </div>
                     <div class="col border border-dark border-4">
-                        <div class="card-img" style="width: 6rem;height: 6rem">
-                            <img src="{{ url_for('static', filename='./assets/img/chess/white_pawn.png') }}"
-                                 alt="white_pawn">
-                        </div>
+                        <img class="card-img" style="width: 6rem;height: 6rem"
+                             src="{{ url_for('static', filename='./assets/img/chess/white_pawn.png') }}"
+                             alt="white_pawn">
                     </div>
                     <div class="col border border-dark border-4">
                         <img class="card-img" style="width: 6rem;height: 6rem"
