--- a/templates/layouts/base_layout.html
+++ b/templates/layouts/base_layout.html
@@ -156,7 +156,7 @@
 <!-- Widgets animation-->
 <script src="{{ url_for('static', filename='./js/navbar.js') }}"></script>
 <!-- Chatbot script-->
-<script src="{{ url_for('static', filename='./js/chatbot.js') }}" type="module"></script>
+<script src="{{ url_for('static', filename='./js/chatbot.js') }}"></script>
 <!-- Chat script-->
 <script src="{{ url_for('static', filename='./js/chat.js') }}"></script>
 <!-- JQuery-->
