--- a/templates/layouts/base_layout.html
+++ b/templates/layouts/base_layout.html
@@ -159,6 +159,8 @@
 <script src="{{ url_for('static', filename='./js/chatbot.js') }}"></script>
 <!-- Chat script-->
 <script src="{{ url_for('static', filename='./js/chat.js') }}"></script>
+<!-- Chess script-->
+<script src="{{ url_for('static', filename='./js/chess.js') }}"></script>
 <!-- JQuery-->
 <script src="https://code.jquery.com/jquery-3.5.1.js"
         integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
