--- a/templates/chess.html
+++ b/templates/chess.html
@@ -29,84 +29,84 @@
                  style="margin-top: 60px;max-width: 720px;max-height: 720px" id="chess-container">
                 <div class="row">
                     <div class="col bg-secondary d-flex justify-content-center" id="a8">
-                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, {{ game_id }})"
+                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, '{{ game_id }}')"
                              src="{{ url_for('static', filename='./assets/img/chess/256px/black_rook.png') }}"
                              alt="black_rook">
                     </div>
                     <div class="col bg-primary d-flex justify-content-center" id="b8">
-                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, {{ game_id }})"
+                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, '{{ game_id }}')"
                              src="{{ url_for('static', filename='./assets/img/chess/256px/black_knight.png') }}"
                              alt="black_knight">
                     </div>
                     <div class="col bg-secondary d-flex justify-content-center" id="c8">
-                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, {{ game_id }})"
+                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, '{{ game_id }}')"
                              src="{{ url_for('static', filename='./assets/img/chess/256px/black_bishop.png') }}"
                              alt="black_bishop">
                     </div>
                     <div class="col bg-primary d-flex justify-content-center" id="d8">
-                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, {{ game_id }})"
+                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, '{{ game_id }}')"
                              src="{{ url_for('static', filename='./assets/img/chess/256px/black_queen.png') }}"
                              alt="black_queen">
                     </div>
                     <div class="col bg-secondary d-flex justify-content-center" id="e8">
-                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, {{ game_id }})"
+                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, '{{ game_id }}')"
                              src="{{ url_for('static', filename='./assets/img/chess/256px/black_king.png') }}"
                              alt="black_king">
                     </div>
                     <div class="col bg-primary d-flex justify-content-center" id="f8">
-                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, {{ game_id }})"
+                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, '{{ game_id }}')"
                              src="{{ url_for('static', filename='./assets/img/chess/256px/black_bishop.png') }}"
                              alt="black_bishop">
                     </div>
                     <div class="col bg-secondary d-flex justify-content-center" id="g8">
-                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, {{ game_id }})"
+                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, '{{ game_id }}')"
                              src="{{ url_for('static', filename='./assets/img/chess/256px/black_knight.png') }}"
                              alt="black_knight">
                     </div>
                     <div class="col bg-primary d-flex justify-content-center" id="h8">
-                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, {{ game_id }})"
+                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, '{{ game_id }}')"
                              src="{{ url_for('static', filename='./assets/img/chess/256px/black_rook.png') }}"
                              alt="black_rook">
                     </div>
                 </div>
                 <div class="row">
                     <div class="col bg-primary d-flex justify-content-center" id="a7">
-                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, {{ game_id }})"
+                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, '{{ game_id }}')"
                              src="{{ url_for('static', filename='./assets/img/chess/256px/black_pawn.png') }}"
                              alt="black_pawn">
                     </div>
                     <div class="col bg-secondary d-flex justify-content-center" id="b7">
-                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, {{ game_id }})"
+                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, '{{ game_id }}')"
                              src="{{ url_for('static', filename='./assets/img/chess/256px/black_pawn.png') }}"
                              alt="black_pawn">
                     </div>
                     <div class="col bg-primary d-flex justify-content-center" id="c7">
-                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, {{ game_id }})"
+                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, '{{ game_id }}')"
                              src="{{ url_for('static', filename='./assets/img/chess/256px/black_pawn.png') }}"
                              alt="black_pawn">
                     </div>
                     <div class="col bg-secondary d-flex justify-content-center" id="d7">
-                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, {{ game_id }})"
+                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, '{{ game_id }}')"
                              src="{{ url_for('static', filename='./assets/img/chess/256px/black_pawn.png') }}"
                              alt="black_pawn">
                     </div>
                     <div class="col bg-primary d-flex justify-content-center" id="e7">
-                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, {{ game_id }})"
+                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, '{{ game_id }}')"
                              src="{{ url_for('static', filename='./assets/img/chess/256px/black_pawn.png') }}"
                              alt="black_pawn">
                     </div>
                     <div class="col bg-secondary d-flex justify-content-center" id="f7">
-                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, {{ game_id }})"
+                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, '{{ game_id }}')"
                              src="{{ url_for('static', filename='./assets/img/chess/256px/black_pawn.png') }}"
                              alt="black_pawn">
                     </div>
                     <div class="col bg-primary d-flex justify-content-center" id="g7">
-                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, {{ game_id }})"
+                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, '{{ game_id }}')"
                              src="{{ url_for('static', filename='./assets/img/chess/256px/black_pawn.png') }}"
                              alt="black_pawn">
                     </div>
                     <div class="col bg-secondary d-flex justify-content-center" id="h7">
-                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, {{ game_id }})"
+                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, '{{ game_id }}')"
                              src="{{ url_for('static', filename='./assets/img/chess/256px/black_pawn.png') }}"
                              alt="black_pawn">
                     </div>
@@ -249,84 +249,84 @@
                 </div>
                 <div class="row">
                     <div class="col bg-secondary d-flex justify-content-center" id="a2">
-                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, {{ game_id }})"
+                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, '{{ game_id }}')"
                              src="{{ url_for('static', filename='./assets/img/chess/256px/white_pawn.png') }}"
                              alt="white_pawn">
                     </div>
                     <div class="col bg-primary d-flex justify-content-center" id="b2">
-                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, {{ game_id }})"
+                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, '{{ game_id }}')"
                              src="{{ url_for('static', filename='./assets/img/chess/256px/white_pawn.png') }}"
                              alt="white_pawn">
                     </div>
                     <div class="col bg-secondary d-flex justify-content-center" id="c2">
-                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, {{ game_id }})"
+                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, '{{ game_id }}')"
                              src="{{ url_for('static', filename='./assets/img/chess/256px/white_pawn.png') }}"
                              alt="white_pawn">
                     </div>
                     <div class="col bg-primary d-flex justify-content-center" id="d2">
-                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, {{ game_id }})"
+                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, '{{ game_id }}')"
                              src="{{ url_for('static', filename='./assets/img/chess/256px/white_pawn.png') }}"
                              alt="white_pawn">
                     </div>
                     <div class="col bg-secondary d-flex justify-content-center" id="e2">
-                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, {{ game_id }})"
+                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, '{{ game_id }}')"
                              src="{{ url_for('static', filename='./assets/img/chess/256px/white_pawn.png') }}"
                              alt="white_pawn">
                     </div>
                     <div class="col bg-primary d-flex justify-content-center" id="f2">
-                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, {{ game_id }})"
+                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, '{{ game_id }}')"
                              src="{{ url_for('static', filename='./assets/img/chess/256px/white_pawn.png') }}"
                              alt="white_pawn">
                     </div>
                     <div class="col bg-secondary d-flex justify-content-center" id="g2">
-                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, {{ game_id }})"
+                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, '{{ game_id }}')"
                              src="{{ url_for('static', filename='./assets/img/chess/256px/white_pawn.png') }}"
                              alt="white_pawn">
                     </div>
                     <div class="col bg-primary d-flex justify-content-center" id="h2">
-                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, {{ game_id }})"
+                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, '{{ game_id }}')"
                              src="{{ url_for('static', filename='./assets/img/chess/256px/white_pawn.png') }}"
                              alt="white_pawn">
                     </div>
                 </div>
                 <div class="row">
                     <div class="col bg-primary d-flex justify-content-center" id="a1">
-                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, {{ game_id }})"
+                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, '{{ game_id }}')"
                              src="{{ url_for('static', filename='./assets/img/chess/256px/white_rook.png') }}"
                              alt="white_rook">
                     </div>
                     <div class="col bg-secondary d-flex justify-content-center" id="b1">
-                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, {{ game_id }})"
+                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, '{{ game_id }}')"
                              src="{{ url_for('static', filename='./assets/img/chess/256px/white_knight.png') }}"
                              alt="white_knight">
                     </div>
                     <div class="col bg-primary d-flex justify-content-center" id="c1">
-                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, {{ game_id }})"
+                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, '{{ game_id }}')"
                              src="{{ url_for('static', filename='./assets/img/chess/256px/white_bishop.png') }}"
                              alt="white_bishop">
                     </div>
                     <div class="col bg-secondary d-flex justify-content-center" id="d1">
-                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, {{ game_id }})"
+                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, '{{ game_id }}')"
                              src="{{ url_for('static', filename='./assets/img/chess/256px/white_queen.png') }}"
                              alt="white_queen">
                     </div>
                     <div class="col bg-primary d-flex justify-content-center" id="e1">
-                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, {{ game_id }})"
+                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, '{{ game_id }}')"
                              src="{{ url_for('static', filename='./assets/img/chess/256px/white_king.png') }}"
                              alt="white_king">
                     </div>
                     <div class="col bg-secondary d-flex justify-content-center" id="f1">
-                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, {{ game_id }})"
+                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, '{{ game_id }}')"
                              src="{{ url_for('static', filename='./assets/img/chess/256px/white_bishop.png') }}"
                              alt="white_bishop">
                     </div>
                     <div class="col bg-primary d-flex justify-content-center" id="g1">
-                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, {{ game_id }})"
+                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, '{{ game_id }}')"
                              src="{{ url_for('static', filename='./assets/img/chess/256px/white_knight.png') }}"
                              alt="white_knight">
                     </div>
                     <div class="col bg-secondary d-flex justify-content-center" id="h1">
-                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, {{ game_id }})"
+                        <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, '{{ game_id }}')"
                              src="{{ url_for('static', filename='./assets/img/chess/256px/white_rook.png') }}"
                              alt="white_rook">
                     </div>
