Implémentation du checking d'un roque, une prise en passant, un échec, un échec et mat, une égalité, etc.

--- a/templates/chess.html
+++ b/templates/chess.html
@@ -23,7 +23,7 @@
 {% block header %}{% endblock %}
 
 {% block content %}
-    <section class="page-section">
+    <section class="page-section" id="chess-area">
         <div class="section">
             <div class="container border border-dark border-3"
                  style="margin-top: 60px;max-width: 720px;max-height: 720px" id="chess-container">
