avancées sur le jeu d'échecs

--- a/templates/chess_game.html
+++ b/templates/chess_game.html
@@ -112,7 +112,7 @@
             <div class="section">
                 <div class="container border border-dark border-3"
                      style="margin-top: 60px;max-width: 720px;max-height: 720px" id="chess-container">
-                    <div class="row" style="display: flex">
+                    <div class="row">
                         <div class="col bg-primary d-flex justify-content-center" id="h1">
                             <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, '{{ game_id }}')"
                                  src="{{ url_for('static', filename='./assets/img/chess/256px/white_rook.png') }}"
@@ -424,7 +424,7 @@
             <div class="section">
                 <div class="container border border-dark border-3"
                      style="margin-top: 60px;max-width: 720px;max-height: 720px" id="chess-container">
-                    <div class="row" style="display: flex">
+                    <div class="row">
                         <div class="col bg-secondary d-flex justify-content-center" id="a8">
                             <img class="card-img" onclick="checkPossibleMoveForThisPiece(this, '{{ game_id }}')"
                                  src="{{ url_for('static', filename='./assets/img/chess/256px/black_rook.png') }}"
